# emmesteel-controller

./: README.md  heater.py  makefile  pyproject.toml  setup.py
emmesteel/: heater.py
home-assistant/: __init__.py  config_flow.py  const.py  manifest.json  number.py  switch.py
references/: pi-network.md  reference-webclient.js
src/emmesteel/: constants.py  heater.py
src/pyemmesteel/: __init__.py
