[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyemmesteel"
version = "0.0.1"
dependencies = [
  "websockets>=13.0.0"
]
authors = [
  { name="Gui Talarico", email="gtalarico.dev@gmail.com" },
]
description = "Python Emmesteel Integration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gtalarico/pyemmesteel"
Issues = "https://github.com/pypa/gtalarico/pyemmesteel"
